--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "telegram-bot-gazili",
+  "name": "Hachibot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,17 +8,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Mert18/telegram-bot-gazili.git"
+    "url": "git+https://github.com/Mert18/Hachibot.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Mert18/telegram-bot-gazili/issues"
+    "url": "https://github.com/Mert18/Hachibot/issues"
   },
-  "homepage": "https://github.com/Mert18/telegram-bot-gazili#readme",
+  "homepage": "https://github.com/Mert18/Hachibot#readme",
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "node-telegram-bot-api": "^0.53.0"
+    "discord.js": "^12.5.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.30.0"
   }
 }
